--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,18 @@
 language: php
 
 php:
-    - 5.4
-    - 5.5
-    - 5.6
+  - 5.6
+  - 7.0
+  - hhvm
 
 before_script:
-    - composer update --no-interaction
+  - travis_retry composer self-update
+  - travis_retry composer install --prefer-source
+  - composer require satooshi/php-coveralls --prefer-source
 
 script:
-    - mkdir -p build/logs
-    - phpunit --coverage-clover build/logs/clover.xml tests
+  - mkdir -p build/logs
+  - ./test --coverage-clover build/logs/clover.xml
 
 after_script:
-    - php vendor/bin/coveralls -v
+  - php vendor/bin/coveralls -v
