--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,7 @@
     "bapcat/propifier": "^1.1"
   },
   "require-dev": {
-    "phpunit/phpunit": "^5.0",
-    "satooshi/php-coveralls": "dev-master"
+    "phpunit/phpunit": "^5.0"
   },
   "autoload": {
     "psr-4": {
