--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,11 @@
     }
   ],
   "require": {
-    "php": ">=5.4.0",
+    "php": ">=5.6.0",
     "bapcat/interfaces": "dev-master"
   },
   "require-dev": {
+    "phpunit/phpunit": "^5.0",
     "satooshi/php-coveralls": "dev-master"
   },
   "autoload": {
