--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "bapcat/persist",
   "description": "A unified, object-oriented way to store data across media",
-  "license": "GPLv3",
+  "license": "GPL-3.0-or-later",
   "homepage": "http://github.com/BapCat/Persist",
   "keywords": ["File", "System", "Persist", "Persistence", "Storage", "Medium", "Media"],
   "authors": [
@@ -11,11 +11,12 @@
     }
   ],
   "require": {
-    "php": ">=5.6.0",
-    "bapcat/propifier": "^1.1"
+    "php": ">=7.1",
+    "bapcat/propifier": "^2.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^5.0"
+    "roave/security-advisories": "dev-master",
+    "phpunit/phpunit": "^7.5"
   },
   "autoload": {
     "psr-4": {
